// Copyright 2021 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.server.encryptedcookies.session;

option go_package = "go.chromium.org/luci/server/encryptedcookies/session/sessionpb";

import "google/protobuf/timestamp.proto";

enum State {
  STATE_UNDEFINED = 0;
  STATE_OPEN      = 1; // the session is valid and can be used
  STATE_CLOSED    = 2; // the session was explicitly closed (e.g. logout)
  STATE_REVOKED   = 3; // the ID provider refused to refresh tokens
}

// Session is what is actually stored in the session storage.
message Session {
  State state = 1;      // identifies where the session is in its lifecycle
  int32 generation = 2; // incremented during each mutation

  google.protobuf.Timestamp created = 3;      // when the session was created
  google.protobuf.Timestamp last_refresh = 4; // last time it was refreshed
  google.protobuf.Timestamp next_refresh = 5; // next refresh time
  google.protobuf.Timestamp closed = 6;       // when it was closed/revoked

  string sub = 7;      // user ID from "sub" ID token claim
  string email = 8;    // user email from "email" ID token claim
  string name = 9;     // user name from "name" ID token claim
  string picture = 10; // profile picture URL from "picture" ID token claim
  // the scopes that were requested in the authorization request, in addition
  // to the default scopes (openid email profile).
  repeated string additional_scopes = 12;

  bytes encrypted_private = 11; // wire-serialized and encrypted Private proto
}

// Private contains data that is stored in the encrypted form in the session.
//
// The encryption key is part of the session cookie and not stored in the
// backend storage.
message Private {
  string refresh_token = 1;
  string access_token = 2;
  string id_token = 3;
}
